# RebService

./: .gitignore  README.md
reb_service/: Cargo.toml
reb_service/http/src/: httpreponse.rs  httprequest.rs  lib.rs
reb_service/httpserver/: Cargo.toml
reb_service/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
reb_service/tcpclient/src/: main.rs
reb_service/tcpserver/src/: main.rs
reb_service/webservice/: Cargo.toml
reb_service/webservice/src/: handlers.rs  models.rs  routers.rs  state.rs
